package com.example.flashcardtool.model;

import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBAttribute;
import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBAutoGeneratedKey;
import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBHashKey;
import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBTable;

@DynamoDBTable(tableName = "Flashcards")
public class Flashcard {

    @DynamoDBHashKey
    @DynamoDBAutoGeneratedKey
    private String id;

    @DynamoDBAttribute
    private String frontContent;

    @DynamoDBAttribute
    private String backContent;

    @DynamoDBAttribute
    private String deckId;

    @DynamoDBAttribute
    private String option1;

    @DynamoDBAttribute
    private String option2;

    @DynamoDBAttribute
    private String option3;

    @DynamoDBAttribute
    private String option4;

    @DynamoDBAttribute
    private String frontImageUrl;

    @DynamoDBAttribute
    private String backImageUrl;

    @DynamoDBAttribute
    private String backVideoUrl;

    @DynamoDBAttribute
    private String frontVideoUrl;


    // Default constructor
    public Flashcard() {
        this.option1 = "";
        this.option2 = "";
        this.option3 = "";
        this.option4 = "";
    }

    // Getters and setters
    public String getBackImageUrl() {
        return backImageUrl;
    }

    public void setBackImageUrl(String backImageUrl) {
        this.backImageUrl = backImageUrl;
    }

    public String getBackVideoUrl() {
        return backVideoUrl;
    }

    public void setBackVideoUrl(String backVideoUrl) {
        this.backVideoUrl = backVideoUrl;
    }

    public String getFrontImageUrl() {
        return frontImageUrl;
    }

    public void setFrontImageUrl(String imageUrl) {
        this.frontImageUrl = imageUrl;
    }

    public String getFrontVideoUrl() {
        return frontVideoUrl;
    }

    public void setFrontVideoUrl(String videoUrl) {
        this.frontVideoUrl = videoUrl;
    }

    public String getId() {
        return id;
    }

    public void setId(String id) {
        this.id = id;
    }

    public String getFrontContent() {
        return frontContent;
    }

    public void setFrontContent(String frontContent) {
        this.frontContent = frontContent;
    }

    public String getBackContent() {
        return backContent;
    }

    public void setBackContent(String backContent) {
        this.backContent = backContent;
    }

    public String getDeckId() {
        return deckId;
    }

    public void setDeckId(String deckId) {
        this.deckId = deckId;
    }

    public String getOption1() {
        return option1;
    }

    public void setOption1(String option1) {
        this.option1 = option1;
    }

    public String getOption2() {
        return option2;
    }

    public void setOption2(String option2) {
        this.option2 = option2;
    }

    public String getOption3() {
        return option3;
    }

    public void setOption3(String option3) {
        this.option3 = option3;
    }

    public String getOption4() {
        return option4;
    }

    public void setOption4(String option4) {
        this.option4 = option4;
    }
}
