package com.example.flashcardtool.model;

import com.amazonaws.services.dynamodbv2.datamodeling.*;

@DynamoDBTable(tableName = "Progress")
public class Progress {

    private String id;
    private String studentId;
    private String deckId;
    private int correctAnswers;
    private int incorrectAnswers;
    private long studyTime; // in milliseconds
    private double percentage;

    // Default constructor
    public Progress() {
        this.correctAnswers = 0;
        this.incorrectAnswers = 0;
        this.studyTime = 0;
        this.percentage = 0.0;
    }

    // Unique ID with auto-generated key for DynamoDB
    @DynamoDBHashKey
    @DynamoDBAutoGeneratedKey
    public String getId() {
        return id;
    }

    public void setId(String id) {
        this.id = id;
    }

    // Student ID
    @DynamoDBAttribute
    public String getStudentId() {
        return studentId;
    }

    public void setStudentId(String studentId) {
        this.studentId = studentId;
    }

    // Deck ID
    @DynamoDBAttribute
    public String getDeckId() {
        return deckId;
    }

    public void setDeckId(String deckId) {
        this.deckId = deckId;
    }

    // Correct Answers
    @DynamoDBAttribute
    public int getCorrectAnswers() {
        return correctAnswers;
    }

    public void setCorrectAnswers(int correctAnswers) {
        this.correctAnswers = correctAnswers;
    }

    // Incorrect Answers
    @DynamoDBAttribute
    public int getIncorrectAnswers() {
        return incorrectAnswers;
    }

    public void setIncorrectAnswers(int incorrectAnswers) {
        this.incorrectAnswers = incorrectAnswers;
    }

    // Study time (in milliseconds)
    @DynamoDBAttribute
    public long getStudyTime() {
        return studyTime;
    }

    public void setStudyTime(long studyTime) {
        this.studyTime = studyTime;
    }

    // Percentage of correct answers
    @DynamoDBAttribute
    public double getPercentage() {
        return percentage;
    }

    public void setPercentage(double percentage) {
        this.percentage = percentage;
    }
}
