@startuml

class Deck {
  + String id
  + String name
  + String userId
  + String description
  + String assignedStudentId
}

class Flashcard {
  + String id
  + String frontContent
  + String backContent
  + String deckId
}

class Progress {
  + String studentId
  + String deckId
  + int correctAnswers
  + int incorrectAnswers
}

class StudentLibrary {
  + String studentId
  + String deckId
}

class User {
  + String id
  + String username
  + String password
  + String email
  + List<String> roles
  + List<String> assignedDeckIds
  + Map<String, String> deckAssignments
  + String passwordResetToken
}

User "1" --> "*" Deck : "creates"
Deck "1" --> "*" Flashcard : "contains"
User "1" --> "*" StudentLibrary : "has assignments"
StudentLibrary "*" --> "1" Deck : "assigned decks"
User "1" --> "*" Progress : "tracks progress"
Progress "*" --> "1" Deck

@enduml